Добавление классов CadConnector, MicroVm, Builder

--- a/MicrophomePlugin/MicrophonePlugin.csproj
+++ b/MicrophomePlugin/MicrophonePlugin.csproj
@@ -80,12 +80,15 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Builder.cs" />
+    <Compile Include="CadConnect.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MicroVM.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
