--- a/MicrophonePluginTests/MicrophonePluginTests.csproj
+++ b/MicrophonePluginTests/MicrophonePluginTests.csproj
@@ -44,6 +44,7 @@
     <Reference Include="nunit.framework, Version=3.11.0.0, Culture=neutral, PublicKeyToken=2638cd05610744eb, processorArchitecture=MSIL">
       <HintPath>..\MicrophomePlugin\packages\NUnit.3.11.0\lib\net45\nunit.framework.dll</HintPath>
     </Reference>
+    <Reference Include="Prism, Version=7.1.0.431, Culture=neutral, PublicKeyToken=40ee6c3a2184dc59" />
     <Reference Include="System" />
   </ItemGroup>
   <Choose>
